--- a/web/Frontend/src/App.css
+++ b/web/Frontend/src/App.css
@@ -11,17 +11,14 @@ textarea {
   width: 375px;
   height: 812px;
   align-items: center;
-  overflow: hidden;
   background-color: #fff;
+  overflow: hidden;
 }
 
-.status-bar {
-  width: 375px;
-  height: 44px;
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.status-bar,
+.header {
+  width: 100%;
+  flex-shrink: 0;
 }
 
 .chat-window {
@@ -33,4 +30,5 @@ textarea {
   flex-direction: column;
   justify-content: flex-start;
   border-top: 1px solid #ddd;
+  overflow-y: auto; /* 메시지 창만 스크롤 가능하도록 설정 */
 }
