--- a/web/Frontend/src/components/ChatMessage.css
+++ b/web/Frontend/src/components/ChatMessage.css
@@ -1,28 +1,21 @@
 .message-container {
   display: flex;
   flex-direction: column;
-  margin: 5px 0;
-}
-
-.message-time {
-  color: #666;
-  font-size: 11px;
-  font-weight: 400;
-  line-height: 11px;
+  margin: 10px 16px; /* 메시지 박스 양쪽 여백을 설정합니다 */
 }
 
 .message {
   color: #222222;
-  max-width: 80%;
-  padding: 10px;
+  padding: 12px 16px;
   border-radius: 5px;
   font-family: 'Pretendard', sans-serif;
   font-weight: 400;
+  word-wrap: break-word;
 }
 
 .message-time-user {
   align-self: flex-end;
-  margin-right: 19px;
+  margin-right: 0; /* 오른쪽 여백을 제거하여 텍스트와 시간 간격을 균등하게 유지합니다 */
   margin-bottom: 10px;
 }
 
@@ -31,7 +24,8 @@
   background: #ffd736;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.06);
   align-self: flex-end;
-  margin-right: 16px;
+  margin-right: 0;
+  padding: 12px 16px;
 }
 
 .message-bot {
@@ -39,7 +33,8 @@
   background: #fff;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.06);
   align-self: flex-start;
-  margin-left: 16px;
+  margin-left: 0;
+  padding: 12px 16px;
 }
 
 .message-time-container {
@@ -52,7 +47,6 @@
   width: 32px;
   height: 32px;
   margin-right: 8px;
-  margin-left: 16px;
 }
 
 .message-time-text {
