--- a/web/Frontend/src/App.css
+++ b/web/Frontend/src/App.css
@@ -25,10 +25,12 @@ textarea {
   width: 375px;
   flex: 1;
   padding: 10px;
+  padding-bottom: 100px;
   background-color: #fcf7e7;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   border-top: 1px solid #ddd;
   overflow-y: auto; /* 메시지 창만 스크롤 가능하도록 설정 */
+  overflow-y: auto; /* 메시지 창만 스크롤 가능 설정 */
 }
